src/styles/article.scss
@use "base";

.article-container *::selection {
  background-color: base.$gray-content;
  color: white;
}

.article-container {
  font-family: "Inter Variable", system-ui, -apple-system, BlinkMacSystemFont,
    "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
    sans-serif;
  font-size: 15px;
  padding-block: 30px;
  padding-inline: 40px;
  height: 100vh;
  overflow-y: scroll;
  scroll-behavior: smooth;
  background-color: black;
  color: rgb(223, 223, 223);
}

h1,
h2,
h3,
h4,
h5,
h6 {
  font-weight: 600;
}

p,
ul,
li {
  font-weight: 300;
}

.article-container a {
  color: rgb(154, 154, 154);
  text-decoration: none;

  &:hover {
    color: rgb(154, 154, 154);
    text-decoration: underline;
  }

  &:visited {
    color: rgb(154, 154, 154);
  }
}

code {
  font-family: "Fragment Mono", monospace;
  font-size: 13px;
  background-color: rgb(37, 37, 37);
  border-radius: 4px;
  padding-block: 2px;
  padding-inline: 4px;
  color: rgb(223, 223, 223);
}

.astro-code {
  padding-inline: 14px;
  padding-block: 8px;
  border-radius: 4px;
}

.astro-code > code {
  padding: 0px;
  background-color: rgb(0, 0, 0, 0) !important;
}

.github-dark {
  background-color: rgb(37, 37, 37) !important;
  border: 1px solid rgb(57, 57, 57);
}

div [id^="user-content-fnref-"] {
  color: rgb(141, 141, 141);
  font-weight: 500;
}

#footnote-label {
  display: none;
}

.data-footnote-backref {
  color: rgb(223, 223, 223) !important;
}

.image-container {
  display: grid;
  align-items: center;
}

.image-container img {
  margin-block: 20px;
}

.article-container video {
  width: 80%;
}

@media screen and (max-width: 864px) {
  .article-container {
    padding: 15px;
    overflow-y: scroll;
    scroll-behavior: smooth;
  }

  .article-container video {
    width: 100%;
  }
}

